[workspace]
members = [
    "common",
    "lumen",
]

[profile.release]
lto = "fat"

[patch.crates-io]
# unreleased diesel implements now under `postgres_backend` instead of `postgres` + required for forked `diesel_async`
diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master"}

# unreleased diesel_async doesn't support cancel_token
diesel-async = { git = "https://github.com/weiznich/diesel_async", branch = "main" }
