[package]
name = "common"
description = "common utilities for lumen"
version = "0.1.0"
authors = ["Naim A. <naim@abda.nl>"]
edition = "2018"
publish = false

[dependencies]
tokio = {version = "1.21", features = ["full"], optional = true}
log = {version = "0.4", features = ["release_max_level_debug"]}
serde = {version = "1.0", features = ["derive"]}
tokio-postgres = {version = "0.7", optional = true}
postgres-native-tls = {version = "0.5", optional = true}
native-tls = {version = "0.2", optional = true}
futures-util = "0.3"
toml = "0.5"
warp = {version = "0.3", optional = true}
binascii = "0.1"

[features]
default = ["web", "db"]
web = ["warp"]
db = ["tokio", "tokio-postgres", "postgres-native-tls", "native-tls"]
