[package]
name = "common"
description = "common utilities for lumen"
version = "0.2.0"
authors = ["Naim A. <naim@abda.nl>"]
edition = "2018"
publish = false

[dependencies]
tokio = {version = "1.25", features = ["full"], optional = true}
log = {version = "0.4", features = ["release_max_level_debug"]}
serde = {version = "1.0", features = ["derive"]}
postgres-native-tls = {version = "0.5", optional = true}
native-tls = {version = "0.2", optional = true}
futures-util = "0.3"
toml = "0.5"
warp = {version = "0.3", optional = true}
binascii = "0.1"
deadpool-postgres = {version = "0.10", optional = true}

[features]
default = ["web", "db"]
web = ["warp"]
db = ["tokio", "postgres-native-tls", "native-tls", "deadpool-postgres"]
