[package]
name = "common"
description = "common utilities for lumen"
version = "0.2.0"
authors = ["Naim A. <naim@abda.nl>"]
edition = "2021"
publish = false

[dependencies]
tokio = {version = "1.32", features = ["full"], optional = true}
log = {version = "0.4", features = ["release_max_level_debug"]}
serde = {version = "1.0", features = ["derive"]}
postgres-native-tls = {version = "0.5", optional = true}
native-tls = {version = "0.2", optional = true}
futures-util = "0.3"
toml = "0.8"
warp = {version = "0.3", optional = true}
binascii = "0.1"

tokio-postgres = {version = "0.7", default-features = false, optional = true}
diesel = {version = "2.1", optional = true, default-features = false, features = ["postgres_backend", "time"]}
time = {version = "0.3.31", optional = true}
diesel-async = {version = "0.3", optional = true, features = ["postgres", "bb8"]}
anyhow = "1.0"
prometheus-client = "0.21.2"

[features]
default = ["web", "db"]
web = ["warp"]
db = ["tokio", "postgres-native-tls", "native-tls", "diesel", "diesel-async", "tokio-postgres", "time"]
