[package]
name = "lumen"
description = "lumen server"
version = "0.1.0"
authors = ["Naim A. <naim@abda.nl>"]
edition = "2018"
publish = false

[dependencies]
common = {path = "../common"}
tokio = {version = "0.3", features = ["full"]}
tokio2 = {package = "tokio", version = "0.2", features = ["full"]}
log = {version = "0.4", features = ["release_max_level_debug"]}
pretty_env_logger = "0.4"
clap = "2.33"
tokio-native-tls = "0.2"
native-tls = {version = "0.2"}
warp = "^0.2.5"
