[package]
name = "lumen"
description = "lumen server"
version = "0.2.0"
authors = ["Naim A. <naim@abda.nl>"]
edition = "2021"
publish = false

[dependencies]
common = {path = "../common"}
tokio = {version = "1.32", features = ["full"]}
log = {version = "0.4", features = ["release_max_level_debug"]}
pretty_env_logger = "0.5"
clap = "4.4"
tokio-native-tls = "0.3"
native-tls = {version = "0.2"}
warp = "0.3"
prometheus-client = "0.21.2"
